--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "max ogden",
   "license": "BSD",
   "dependencies": {
-    "global": "^4.2.1",
-    "mercury": "^8.0.0",
-    "observify": "^1.0.2"
+    "brfs": "^1.2.0",
+    "defaultcss": "^1.0.0",
+    "react": "^0.11.2"
   },
   "devDependencies": {
     "beefy": "^2.1.1",
